# python-genai

./: CHANGELOG.md  README.md  codegen_instructions.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: import.yml  mypy.yml
docs/: genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
google/genai/: __init__.py  _adapters.py  _api_client.py  _api_module.py  _automatic_function_calling_util.py  _base_transformers.py  _base_url.py  _common.py  _extra_utils.py  _live_converters.py  _local_tokenizer_loader.py  _mcp_utils.py  _operations_converters.py  _replay_api_client.py  _test_api_client.py  _tokens_converters.py  _transformers.py  batches.py  caches.py  chats.py  client.py  errors.py  files.py  live.py  live_music.py  local_tokenizer.py  models.py  mypy.ini  operations.py  pagers.py  tokens.py  tunings.py  types.py  version.py
google/genai/tests/: __init__.py  conftest.py  pytest_helper.py
google/genai/tests/afc/: __init__.py  test_convert_if_exist_pydantic_model.py  test_convert_number_values_for_function_call_args.py  test_generate_content_stream_afc.py  test_generate_content_stream_afc_thoughts.py  test_get_function_map.py  test_get_function_response_parts.py  test_get_max_remote_calls_for_afc.py  test_invoke_function_from_dict_args.py  test_should_append_afc_history.py  test_should_disable_afc.py
google/genai/tests/batches/: __init__.py  test_cancel.py  test_create.py  test_create_with_bigquery.py  test_create_with_file.py  test_create_with_gcs.py  test_create_with_inlined_requests.py  test_delete.py  test_embedding.py  test_get.py  test_list.py
google/genai/tests/caches/: __init__.py  constants.py  test_create.py  test_create_custom_url.py  test_delete.py  test_delete_custom_url.py  test_get.py  test_get_custom_url.py  test_list.py  test_update.py  test_update_custom_url.py
google/genai/tests/chats/: __init__.py  test_get_history.py  (+2 more)
(+120 files in other folders)
